samples/_failures_safe/1761407567_6e9dd9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e365b763.c: In function ‘analyze_logs’:
./samples/SAFE/__tmp_e365b763.c:120:12: error: missing terminating " character
  120 |     printf("DEBUG messages: %d (
      |            ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_e365b763.c:120:5: error: expected expression at end of input
  120 |     printf("DEBUG messages: %d (
      |     ^~~~~~
./samples/SAFE/__tmp_e365b763.c:120:5: error: expected declaration or statement at end of input
